Fix the gap between the FAQ and the banner

--- a/client/modules/FAQ/FAQ.scss
+++ b/client/modules/FAQ/FAQ.scss
@@ -1,3 +1,4 @@
+@import "~styles/variables.scss";
 
 .Faq {
   height: 100%;
@@ -18,4 +19,17 @@
     padding-bottom: 40px;
   }
 
+}
+
+$page-margins-d: 50px auto;
+$page-margins-m: 30px auto;
+
+.page-wrapper {
+  width: $component-width-desktop;
+  margin: $page-margins-d;
+
+  @media (max-width: $mobile-max-width) {
+    width: $component-width-mobile;
+    margin: $page-margins-m;
+  }
 }
